--- a/FunctionAppExamples/FunctionAppExamples/FunctionAppExamples.csproj
+++ b/FunctionAppExamples/FunctionAppExamples/FunctionAppExamples.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.16.4" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.5.0" />
+    <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.2.2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
